@@ -10,6 +10,7 @@
 - added a better support for `*:tagname` prefixes in HTMLParser
 - fixed context in the components
 - fixed URL downloading templates in `TEMPLATE()` method
+- fixed parsing of unpaired elements in HTMLParser
 
 ========================
 0.0.7
